--- a/cronjob-bin.yaml
+++ b/cronjob-bin.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
     name: bin
 spec:
-  schedule: "0 8 * * 0"
+  schedule: "0 8 * * *"
   jobTemplate:
     spec:
       template:
